--- a/api/package.json
+++ b/api/package.json
@@ -31,7 +31,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aeria": "^0.0.124",
-    "aeria-sdk": "^0.0.102"
+    "aeria": "^0.0.125",
+    "aeria-sdk": "^0.0.103"
+  },
+  "devDependencies": {
+    "typescript": "^5.5.2"
   }
 }
